--- a/assets/html/index.html
+++ b/assets/html/index.html
@@ -11,6 +11,7 @@ title: Модуль - научно-технический центр
 	{{> partners }}
 	{{> products }}
 	{{> projects }}
+	{{> news }}
 
 </main>
 {{> footer }}
