Табы на странице направления

--- a/assets/html/directions.html
+++ b/assets/html/directions.html
@@ -8,6 +8,8 @@ title: Модуль - научно-технический центр
 
 	{{> hero }}
 	{{> application }}
+	{{> direction-products }}
+	{{> projects }}
 
 </main>
 {{> footer }}
